examples/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-jedi-example
  namespace: banja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-jedi-example
  template:
    metadata:
      labels:
        app: react-jedi-example
    spec:
      containers:
      - name: react-jedi-example
        image: ghcr.io/alexberriman/react-jedi-example:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 128Mi
      imagePullSecrets:
      - name: ghcr
