examples/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-jedi-example
  namespace: banja
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: react-jedi-example
